ghc-4335c07/testsuite/tests/gadt/T3163.stderr

T3163.hs:8:5: error:
    • Illegal polymorphic type: forall s. s
    • In the definition of data constructor ‘Unreached’
      In the data type declaration for ‘Taker’
