ghc-4335c07/testsuite/tests/gadt/T3163.hs
{-# LANGUAGE GADTs, RankNTypes, ImpredicativeTypes #-}

-- Test Trac #3163

module Report where

data Taker a where
    Unreached :: Taker (forall s. s)

